--- a/realm-tutorial/Base.lproj/Main.storyboard
+++ b/realm-tutorial/Base.lproj/Main.storyboard
@@ -1,26 +1,89 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bb2-Iu-ySV">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="DsV-tH-hkF">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="realm_tutorial" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="bb2-Iu-ySV" customClass="ViewController" customModule="realm_tutorial" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="tlm-Yt-CpW">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="Q69-mf-KAz">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Af-4H-I3g">
+                                    <rect key="frame" x="8" y="14" width="508" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="bBi-bx-SPg"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tox-ad-YCf">
+                                    <rect key="frame" x="511" y="14" width="81" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="81" id="2Sj-ZR-Hhe"/>
+                                        <constraint firstAttribute="height" constant="30" id="e3s-Dk-34D"/>
+                                    </constraints>
+                                    <state key="normal" title="Add"/>
+                                    <connections>
+                                        <action selector="addText:" destination="bb2-Iu-ySV" eventType="touchUpInside" id="Kfa-4C-V27"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="8Af-4H-I3g" secondAttribute="trailing" constant="84" id="2L1-4U-yZz"/>
+                                <constraint firstAttribute="trailing" secondItem="tox-ad-YCf" secondAttribute="trailing" id="8Ko-pp-HqU"/>
+                                <constraint firstItem="tox-ad-YCf" firstAttribute="trailing" secondItem="Q69-mf-KAz" secondAttribute="trailingMargin" id="btF-sm-TIt"/>
+                                <constraint firstItem="tox-ad-YCf" firstAttribute="top" secondItem="8Af-4H-I3g" secondAttribute="top" id="kW9-pq-Vm5"/>
+                                <constraint firstAttribute="bottom" secondItem="8Af-4H-I3g" secondAttribute="bottom" id="rql-7B-mrA"/>
+                                <constraint firstItem="8Af-4H-I3g" firstAttribute="leading" secondItem="Q69-mf-KAz" secondAttribute="leading" constant="8" id="wd2-3p-keX"/>
+                            </constraints>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="8Ko-pp-HqU"/>
+                                </mask>
+                            </variation>
+                        </view>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ListCell" textLabel="Wid-gk-vro" style="IBUITableViewCellStyleDefault" id="hZB-iP-Ue2">
+                                <rect key="frame" x="0.0" y="72" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hZB-iP-Ue2" id="OnK-ah-AD4">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Wid-gk-vro">
+                                            <rect key="frame" x="15" y="0.0" width="570" height="43"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="bb2-Iu-ySV" id="eTr-F4-R3G"/>
+                            <outlet property="delegate" destination="bb2-Iu-ySV" id="TIb-Ul-MDt"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="textInput" destination="8Af-4H-I3g" id="Vbw-YC-YtO"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Ip-4p-OrK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="168" y="839"/>
         </scene>
     </scenes>
 </document>
